rust_test_framework/tests/compile_tests/should_fail/duplicate_source_mixed.stderr
error: Duplicate test case value found
 --> tests/compile_tests/should_fail/duplicate_source_mixed.rs:4:15
  |
4 | #[test_params(3)]
  |               ^
